# sensei

./: .dir-locals.el  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TAGS  build.hs  cabal.project  docker-compose.yml  flow  hie.yaml  nginx.tmpl  sensei.cabal  stack.yaml  test-split.sqlite  test.db  test.sqlite  user.json
.radicle/: native.yaml
app/: Main.hs  md2leaflet.hs  sensei.hs
client/: Makefile  gen-certs.sh  main.c  osx-ca-certs  sensei.c  sensei.h  test-runner.c  test.c
docs/: index.md  swagger.md
elisp/: sensei.el
golden/: Article.json  BskyBackend.json  Document.json  Event.json  Event.v12.json  Event.v13.json  Event.v14.json  UserProfile.json
haskell-base/: Dockerfile  entry.sh
infra/: .gitignore  app.tf  backend.tf  compute.tf  configure.sh  dns.tf  docker-compose.yml  firewall.tf  provider.tf
infra/packer/: build-env.sh  build.json
install/: Install.hs  install.cabal  package.yaml  shake.yaml
ios/Sensei/: README.md
ios/Sensei/Sensei/Sensei/: ContentView.swift  SenseiApp.swift
ios/Sensei/Sensei/Sensei.xcodeproj/: project.pbxproj
ios/Sensei/Sensei/Sensei.xcodeproj/project.xcworkspace/xcuserdata/arnaud.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Sensei/Sensei/Sensei/Models/: Credentials.swift  Event.swift  UserProfile.swift
ios/Sensei/Sensei/Sensei/Services/: APIClient.swift  KeychainHelper.swift  SettingsStore.swift
ios/Sensei/Sensei/Sensei/Views/: LoginView.swift  RecordView.swift  SettingsView.swift
ios/Sensei/Sensei/SenseiTests/: SenseiTests.swift
ios/Sensei/Sensei/SenseiUITests/: SenseiUITests.swift  SenseiUITestsLaunchTests.swift
ios/SenseiApp/Sensei/Sensei.xcodeproj/project.xcworkspace/xcuserdata/arnaud.xcuserdatad/: UserInterfaceState.xcuserstate
nginx-test/: .env  docker-compose.yml  nginx.conf
servant-server-base/: ChangeLog.md  README.md  package.yaml  servant-server-base.cabal  stack.yaml
servant-server-base/app/: example-server.hs
servant-server-base/src/Data/Aeson/: Extra.hs
servant-server-base/src/Data/Maybe/: Extra.hs
servant-server-base/src/Data/Text/: Decode.hs  FromText.hs  Streamed.hs  ToCSV.hs  ToText.hs
servant-server-base/src/Data/Text/Lazy/: Decode.hs  FromText.hs  ToText.hs
servant-server-base/src/Data/Time/: Extra.hs
servant-server-base/src/Network/: CORS.hs  HostName.hs  Html.hs
servant-server-base/src/Network/URI/: Extra.hs
servant-server-base/src/Preface/: Codec.hs  Log.hs  Server.hs  Utils.hs
servant-server-base/test/Preface/: CodecSpec.hs
src/Sensei/: API.hs  App.hs  Article.hs  Backend.hs  Bsky.hs  CLI.hs  Client.hs  Color.hs  DB.hs  Duration.hs  Event.hs  Flow.hs  FlowType.hs  FlowView.hs  Goal.hs  Graph.hs  Group.hs  IO.hs  Markdown.hs  Project.hs  Server.hs  Summary.hs  Time.hs  UI.hs  User.hs  Utils.hs  Version.hs  Wrapper.hs
src/Sensei/Backend/: Class.hs
src/Sensei/Bsky/: CID.hs  Core.hs  Leaflet.hs  Server.hs  TID.hs
src/Sensei/Bsky/Leaflet/: Markdown.hs
src/Sensei/CLI/: Options.hs  Terminal.hs
src/Sensei/Client/: Monad.hs
src/Sensei/DB/: File.hs  Log.hs  SQLite.hs
src/Sensei/DB/SQLite/: Migration.hs  Users.hs
src/Sensei/Markdown/: Markdown.hs  Parser.hs
src/Sensei/Server/: Auth.hs  Config.hs  Links.hs  OpenApi.hs  Options.hs  Tags.hs  UI.hs
src/Sensei/Server/Auth/: API.hs  Types.hs
test/: sample-leaflet-document.json  simple-leaflet-document.json  simple-publication.json
test/Sensei/: APISpec.hs  ArticleSpec.hs  BskySpec.hs  Builder.hs  CLISpec.hs  ClientSpec.hs  ColorSpec.hs  DurationSpec.hs  EventSpec.hs  FlowAPISpec.hs  FlowSpec.hs  FlowViewSpec.hs  Generators.hs  GoalAPISpec.hs  GraphSpec.hs  LogSpec.hs  MarkdownSpec.hs  ProjectSpec.hs  ServerSpec.hs  TagAPISpec.hs  TestHelper.hs  UISpec.hs  UserSpec.hs  VersionSpec.hs  WaiTestHelper.hs  WrapperSpec.hs
test/Sensei/Bsky/: LeafletSpec.hs  Server.hs  ServerSpec.hs  TIDSpec.hs
test/Sensei/DB/: FileSpec.hs  Model.hs  SQLiteSpec.hs
test/Sensei/Server/: AuthSpec.hs  LinksSpec.hs
ui/: .babelrc  .gitignore  index.html  package-lock.json  package.json  timeline.js  webpack.config.js
ui/src/: auth.js  charts.js  color.js  commands.js  config.js  css-notes.js  css-notes.test.js  css-timeline.js  css-timeline.test.js  date.js  date.test.js  dom.js  goals.js  goals.test.js  index.html  index.js  logs.js  markdown.js  mobile-nav.js  notes.js  notes.test.js  page.js  project.js  record.js  request.js  style.css  summaries.js  summary.js  timeline.js  user.js
ui/src/__snapshots__/: css-notes.test.js.snap  css-timeline.test.js.snap  notes.test.js.snap
ui/src/timeline/: Timeline.js  Timeline.test.js
ui/src/timeline/__snapshots__/: Timeline.test.js.snap
