name:                sensei
version:             0.43.3
synopsis:            A tool to collect information about one's coding process
homepage:            https://github.com/abailly/sensei#readme
license:             BSD3
license-file:        LICENSE
author:              Arnaud Bailly
maintainer:          arnaud@pankzsoft.com
copyright:           2020 Arnaud Bailly
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=2.0

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/abailly/sensei#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Sensei.API
                     , Sensei.Client
                     , Sensei.App
                     , Sensei.Server
                     , Sensei.Graph
                     , Sensei.Group
                     , Sensei.CLI
                     , Sensei.IO
                     , Sensei.Time
                     , Sensei.Version
                     , Sensei.Wrapper
                     , Sensei.Utils
                     , Sensei.DB
                     , Sensei.DB.File
                     , Sensei.DB.Log
                     , Sensei.DB.SQLite
  other-modules: Sensei.Client.Monad, Sensei.Event, Sensei.Flow, Sensei.FlowType, Sensei.FlowView, Sensei.Server.OpenApi,
                 Sensei.Server.Auth, Sensei.Server.Options, Sensei.Server.Links, Sensei.Server.UI, Sensei.Server.Config,
                 Sensei.DB.SQLite.Migration, Sensei.CLI.Terminal, Paths_sensei,
                 Sensei.Summary, Sensei.User, Sensei.Color, Sensei.Duration, Sensei.Server.Tags, Sensei.CLI.Options,
                 Sensei.Project, Sensei.Goal
  ghc-options:         -Wall -Werror -fno-warn-orphans
  build-depends:       aeson
                     , aeson-pretty
                     , algebraic-graphs
                     , ansi-terminal
                     , async
                     , base
                     , bytestring
                     , case-insensitive
                     , colour
                     , containers
                     , cryptonite
                     , directory
                     , file-embed
                     , filepath
                     , hdaemonize
                     , http-client
                     , http-client-tls
                     , http-link-header
                     , http-types
                     , insert-ordered-containers
                     , jose
                     , lens
                     , mtl
                     , optparse-applicative
                     , parsec
                     , prettyprinter
                     , process
                     , random
                     , regex-tdfa
                     , safe-exceptions
                     , servant
                     , servant-auth
                     , servant-client
                     , servant-client-core
                     , servant-server
                     , servant-server-base
                     , servant-auth-server
                     , servant-swagger
                     , sqlite-simple
                     , stm
                     , swagger2
                     , template-haskell
                     , text
                     , time
                     , time-lens
                     , tz
                     , unix
                     , unordered-containers
                     , wai
                     , wai-app-static
  default-language:    Haskell2010

executable sensei-exe
  hs-source-dirs:      app
  main-is:             sensei.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -fno-warn-orphans
  build-depends:       base
                     , directory
                     , filepath
                     , process
                     , safe-exceptions
                     , sensei
                     , text
                     , time
                     , unix
  default-language:    Haskell2010

test-suite sensei-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Sensei.CLISpec
                     , Sensei.ClientSpec
                     , Sensei.ColorSpec
                     , Sensei.FlowSpec
                     , Sensei.FlowAPISpec
                     , Sensei.FlowViewSpec
                     , Sensei.GoalAPISpec
                     , Sensei.GraphSpec
                     , Sensei.LogSpec
                     , Sensei.DurationSpec
                     , Sensei.ServerSpec
                     , Sensei.Server.AuthSpec
                     , Sensei.Server.LinksSpec
                     , Sensei.Builder
                     , Sensei.TestHelper
                     , Sensei.ProjectSpec
                     , Sensei.UISpec
                     , Sensei.TagAPISpec
                     , Sensei.UserSpec
                     , Sensei.VersionSpec
                     , Sensei.WaiTestHelper
                     , Sensei.WrapperSpec
                     , Sensei.DB.Model
                     , Sensei.DB.SQLiteSpec
                     , Sensei.Generators
  build-depends:       aeson
                     , base
                     , binary
                     , bytestring
                     , base64-bytestring
                     , case-insensitive
                     , colour
                     , containers
                     , cookie
                     , directory
                     , filepath
                     , hspec
                     , hspec-discover
                     , hspec-wai
                     , http-link-header
                     , http-media
                     , http-types
                     , jose
                     , lens
                     , mtl
                     , prettyprinter
                     , QuickCheck
                     , quickcheck-classes
                     , safe-exceptions
                     , sensei
                     , servant-client-core
                     , servant-server
                     , servant-server-base
                     , sqlite-simple
                     , text
                     , time
                     , time-lens
                     , unix
                     , vector
                     , wai
                     , wai-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sensei
