name:               sensei
version:            0.44.0
synopsis:           A tool to collect information about one's coding process
homepage:           https://github.com/abailly/sensei#readme
license:            BSD3
license-file:       LICENSE
author:             Arnaud Bailly
maintainer:         arnaud@pankzsoft.com
copyright:          2020 Arnaud Bailly
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

cabal-version:      2.0

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:
  Please see the README on Github at <https://github.com/abailly/sensei#readme>

library
  hs-source-dirs:   src
  exposed-modules:
    Sensei.API
    Sensei.App
    Sensei.CLI
    Sensei.Client
    Sensei.DB
    Sensei.DB.File
    Sensei.DB.Log
    Sensei.DB.SQLite
    Sensei.Graph
    Sensei.Group
    Sensei.IO
    Sensei.Server
    Sensei.Time
    Sensei.Utils
    Sensei.Version
    Sensei.Wrapper

  other-modules:
    Paths_sensei
    Sensei.CLI.Options
    Sensei.CLI.Terminal
    Sensei.Client.Monad
    Sensei.Color
    Sensei.DB.SQLite.Migration
    Sensei.Duration
    Sensei.Event
    Sensei.Flow
    Sensei.FlowType
    Sensei.FlowView
    Sensei.Goal
    Sensei.Project
    Sensei.Server.Auth
    Sensei.Server.Config
    Sensei.Server.Links
    Sensei.Server.OpenApi
    Sensei.Server.Options
    Sensei.Server.Tags
    Sensei.Server.UI
    Sensei.Summary
    Sensei.User

  ghc-options:      -Wall -Werror -fno-warn-orphans
  build-depends:
      aeson
    , aeson-pretty
    , algebraic-graphs
    , ansi-terminal
    , async
    , base
    , bytestring
    , case-insensitive
    , colour
    , containers
    , cryptonite
    , directory
    , file-embed
    , filepath
    , http-client
    , http-client-tls
    , http-link-header
    , http-types
    , insert-ordered-containers
    , jose
    , lens
    , mtl
    , optparse-applicative
    , parsec
    , prettyprinter
    , process
    , random
    , regex-tdfa
    , safe-exceptions
    , servant
    , servant-auth
    , servant-auth-server
    , servant-client
    , servant-client-core
    , servant-server
    , servant-server-base
    , servant-swagger
    , sqlite-simple
    , stm
    , swagger2
    , template-haskell
    , text
    , time
    , time-lens
    , tz
    , unix
    , unordered-containers
    , wai
    , wai-app-static

  default-language: Haskell2010

executable sensei-exe
  hs-source-dirs:   app
  main-is:          sensei.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -fno-warn-orphans

  build-depends:
      base
    , directory
    , filepath
    , process
    , safe-exceptions
    , sensei
    , text
    , time
    , unix

  default-language: Haskell2010

test-suite sensei-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    Sensei.Builder
    Sensei.ClientSpec
    Sensei.CLISpec
    Sensei.ColorSpec
    Sensei.DB.Model
    Sensei.DB.SQLiteSpec
    Sensei.DurationSpec
    Sensei.FlowAPISpec
    Sensei.FlowSpec
    Sensei.FlowViewSpec
    Sensei.Generators
    Sensei.GoalAPISpec
    Sensei.GraphSpec
    Sensei.LogSpec
    Sensei.ProjectSpec
    Sensei.Server.AuthSpec
    Sensei.Server.LinksSpec
    Sensei.ServerSpec
    Sensei.TagAPISpec
    Sensei.TestHelper
    Sensei.UISpec
    Sensei.UserSpec
    Sensei.VersionSpec
    Sensei.WaiTestHelper
    Sensei.WrapperSpec

  build-depends:
      aeson
    , base
    , base64-bytestring
    , binary
    , bytestring
    , case-insensitive
    , colour
    , containers
    , cookie
    , directory
    , filepath
    , hspec
    , hspec-wai
    , http-link-header
    , http-media
    , http-types
    , jose
    , lens
    , mtl
    , prettyprinter
    , QuickCheck
    , quickcheck-classes
    , random
    , safe-exceptions
    , sensei
    , servant-client-core
    , servant-server
    , servant-server-base
    , sqlite-simple
    , text
    , time
    , time-lens
    , unix
    , vector
    , wai
    , wai-extra

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -fno-warn-orphans
    -Wno-incomplete-uni-patterns

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover

source-repository head
  type:     git
  location: https://github.com/githubuser/sensei
